--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@koa/cors": "^3.1.0",
     "bcrypt": "^5.0.1",
     "handlebars": "~4.0.5",
+    "joi": "^17.4.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
